# EC

./: .gitignore  CMakeLists.txt  ECConfig.h.in  Install.md  README.md  ReleaseNotes  TODO  TODO.md  TODO_Next.md  ToDo.md  Tutorial.md  cmake.sh  ec  ec_test  install  install.sh  make.sh  open.sh  readme  readme.txt  session_ec.vim  setup.sh  tags  test  todo  todo.txt
.ec/: CMakeLists.txt  ec_make.sh  ec_todo  ec_user_current  ec_user_local  make.sh  todo  user  version.h
EC/: install  open.sh  readme  setup.sh
EC/include/: ec_bench.h  ec_entity.h  ec_list.h  ec_main.h  ec_print.h  ec_queue.h  ec_stack.h  ec_syntax.h
EC/tools/: open.vim  register  setup.sh
doc/: dev.odt  directory_structure.odt
doc/source/: .~lock.EC_Manuel_EN.odt#  EC_Manuel_EN.odt  dev.odt
docs/: README.md  code style.odt  coding_guidelines.odt  ec_rules.odt  invite.odt
docs/odt/: DOP.odt  code style.odt
ec/: CMakeLists.txt  ec  install  open.sh  session.vim  setup.sh
ec-cli/: CMakeLists.txt  ec-cli  setup.sh
ec-cli/src/: main.c
ec-cli/tools/: CMakeLists.txt  open.vim
ec-shortcut/: CMakeLists.txt  ec-shortcut  install  main.c  session.vim  setup.sh  testit.desktop
ec-shortcut/tools/: CMakeLists.txt
ec/share/: readme
ec/src/: main.c
ec/tools/: CMakeLists.txt  open.vim
eclib/: CMakeLists.txt  ec_bench.c  ec_class.h  ec_error.c  ec_object.c  ec_object.h  ec_string.c  ec_type.h  readme  session.vim  setup.sh
eclib/include/: ec_array.h  ec_bits.h  ec_char.h  ec_error.h  ec_file.h  ec_garbage.h
eclib/src/: ec.c  ec_bits.c  ec_class.c  ec_file.c  ec_garbage.c  ec_list.c  ec_print.c  ec_sys.c  ec_tokenize_file.c  ec_vector.c
eclib/tools/: CMakeLists.txt  open.vim
etc/: open.sh  setup.sh
include/: ec.h  ec_array.h  ec_array_ref.h  ec_bool.h  ec_c_file.h  ec_code.h  ec_debug.h  ec_dir.h  ec_ecs.h  ec_ecs3.h~  ec_entity.h  ec_error.h  ec_file.h  ec_list.c  ec_list.h  ec_list_ref.h  ec_loc.h  ec_macro.h  ec_memory.h  ec_print.h  ec_queue.h  ec_queue_ref.h  ec_ref_var.h  ec_stack.h  ec_stack_ref.h  ec_string.h  ec_test.h  ec_text_color.h  ec_time.h  ec_todo.h  ec_tokenize_file.h  ec_type.h  ec_var.h  ec_var_ref.h  ec_variable.h  ec_variable_ref.h  ec_vector.h  ec_version.h  ec_warn.h  ecs.h  (+2 more)
newapp/tools/: CMakeLists.txt  open.vim
remove-build/: CMakeLists.txt  main.c  open.sh  remove-build  session.vim  setup.sh
remove-build/src/: main.c
remove-build/tools/: CMakeLists.txt
reset-shortcut/: CMakeLists.txt  readme  reset-shortcut  setup.sh
reset-shortcut/src/: main.c
reset-shortcut/tools/: CMakeLists.txt
reset-shortcuts/: CMakeLists.txt  open.sh  reset-shortcuts  session.vim  setup.sh
reset-shortcuts/tools/: CMakeLists.txt  open.vim
share/: readme
share/doc/: ec_rules.odt  invite.odt
src/: ec.c  ec_array.c  ec_array.h  ec_array_ref.c  ec_debug.c  ec_ecs.c  ec_entity.c  ec_error.c  ec_file.c  ec_list.c  ec_list.h  ec_list_ref.c  ec_loc.c  ec_memory.c  ec_os.c  ec_queue_ref.c  ec_ref_array.c  ec_ref_list.c  ec_ref_queue.c  ec_ref_stack.c  ec_ref_var.c  ec_stack.c  ec_stack_ref.c  ec_string.c  ec_test.c  ec_text_color.c  ec_time.c  ec_todo.c  ec_type.c  ec_var.h  ec_var_ref.c  ec_variable.c  ec_variable_ref.c  ec_version.c  ec_warn.c
src/cli/: CMakeLists.txt  install  readme  setup.sh
src/ec/: ec.c  ec_app_lib.c  ec_app_lib.h  ec_cli.c  ec_cli.h  ec_dependency.c  ec_dependency.h  ec_file.c  ec_todo.c  ec_todo.h  ec_user.c  ec_user.h  ec_version.c  ec_version.h
src/lib/: ec.h  ec_code.c  ec_dependency.c  ec_dependency.h  ec_dir.c  ec_dir.h  ec_ecs.c  ec_memory.c  ec_queue.h  ec_string.c  ec_string.h  ec_test.c  ec_var.h  ecs.c
src/reset-shortcut/: open.vim  reset-shortcut  setup.sh
src/rmbuild/: CMakeLists.txt  main.c  open.vim
src/shell/: CMakeLists.txt  main.c  open.vim  setup.sh
src/shortcut/: open.vim  readme  setup.sh
src/tests/: README.md  ec_main_test.c  ec_queue_test.c  ec_stack_test.c
test/: CMakeLists.txt  cmake.sh  ec_array_test.c  ec_class_test.h  ec_list_test.c  ec_list_test.h  ec_object_test.h  ec_test.c  ec_test.h  ecstringtest.c  ectest  install.sh  make.sh  readme  session.vim  session_ec_test.vim  session_ec_test_ref.vim  setup.sh
test/ecs/: ec_ecs_test.c  ec_ecs_test.h
test/include/: .ec_array_test.h.swp  .ec_ecs_test.h.swp  .ec_list_test.h.swp  .ec_main_test.h.swp  .ec_queue_test.h.swp  .ec_stack_test.h.swp  .ec_var_test.h.swp  .student.h.swp  ec_array_ref_test.h  ec_array_test.h  ec_ecs_test.h  ec_file_test.h  ec_list_ref_test.h  ec_list_test.h  ec_loc_test.h  ec_main_test.h  ec_queue_ref_test.h  ec_queue_test.h  ec_ref_array_test.h  ec_ref_list_test.h  ec_ref_queue_test.h  ec_ref_stack_test.h  ec_ref_var_test.h  ec_stack.h  ec_stack_ref_test.h  ec_stack_test.h  ec_test.h  ec_type_test.h  ec_var_ref_test.h  ec_var_test.h  ec_variable_test.h  student.h
test/src/: .ec_array_test.c.swp  .ec_ecs_test.c.swp  .ec_list_test.c.swp  .ec_main_test.c.swp  .ec_queue_test.c.swp  .ec_stack_test.c.swp  .ec_var_test.c.swp  .student.c.swp  ec_EC_test.c  ec_EC_test.h  ec_array_ref_test.c  ec_array_test.c  ec_array_test.h  ec_bench_test.c  ec_class_test.c  ec_ecs_test.c  ec_ecs_test.h  ec_file_test.c  ec_list_ref_test.c  ec_list_test.c  ec_list_test.h  ec_loc_test.c  ec_macro_test.c  ec_main_test.c  ec_main_test.h  ec_object_test.c  ec_queue_ref_test.c  ec_queue_test.c  ec_ref_array_test.c  ec_ref_list_test.c  ec_ref_queue_test.c  ec_ref_stack_test.c  ec_ref_var_test.c  ec_stack_ref_test.c  ec_stack_test.c  ec_test.c  ec_time_test.h  ec_type_test.c  ec_var_ref_test.c  ec_var_test.c  (+7 more)
test/src/testbench/: gmon.out  testbench  (+2 more)
test/testdata/: ec_file_test_file1.c
test/tools/: CMakeLists.txt  open.vim
tests/: CMakeLists.txt  component.h  ec_array_test.c  ec_array_test.h  ec_c_file_test.c  ec_c_file_test.h  ec_code_test.c  ec_code_test.h  ec_ec_test.h  ec_file_test.c  ec_file_test.h  ec_list_test.c  ec_list_test.h  ec_main_test.c  ec_main_test.h  ec_make.sh  ec_stack.h  ec_time_test.h  ec_var_test.c  ec_var_test.h  student.h  tests
tests/src/: ec_list_test.c
tools/: open.vim
website/: about.html  download.html  index.html
